Fix buttons on mobile

--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -122,7 +122,7 @@ body
       background: url($i_back)
       background-size: w($i_back, $r) h($i_back, $r)
       opacity: 0.95
-      width: $container_width - (50px * $r)
+      width: $container_width - (80px * $r)
       display: inline-block
       height: 100%
 
